--- a/src/android/res/values/styles.xml
+++ b/src/android/res/values/styles.xml
@@ -15,4 +15,21 @@
         <item name="android:windowBackground">@drawable/dialog_bg</item>
     </style>
 
+    <style name="gt4_captcha_dialog_style" parent="android:Theme.Dialog">
+        <!--Dialog的windowFrame框为无-->
+        <item name="android:windowFrame">@null</item>
+        <!--是否浮现在activity之上-->
+        <item name="android:windowIsFloating">true</item>
+        <!--是否半透明-->
+        <item name="android:windowIsTranslucent">true</item>
+        <!--除去title-->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <!--显示区域以外是否使用黑色半透明背景-->
+        <item name="android:backgroundDimEnabled">true</item>
+        <!--设置dialog的背景-->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:padding">0dp</item>
+    </style>
+
 </resources>
